# manny_mcp

./: .env.example  .gitignore  .mcp.json  ACHIEVEMENT_SUMMARY.md  AUTONOMY_SETUP.md  CAMPAIGN.md  CHANGELOG.md  CLAUDE.md  COMMAND_REFERENCE.md  CONFIGURATION.md  DASHBOARD_DEV_QUICKSTART.md  DASHBOARD_MOBILE_TESTING.md  DEPLOY_WINDOW_CHECKLIST.md  END_TO_END_TEST_REPORT.md  EXAMPLE_WORKFLOW.md  FIX_PLAN_SUPERHEAT_ISSUES.md  GEMINI.md  HANDOFF_COOKS_ASSISTANT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_HISTORY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  JAVA_REFACTORING_STATUS.md  MCP_IMPROVEMENTS_FINAL_REPORT.md  MCP_IMPROVEMENTS_IMPLEMENTED.md  MCP_IMPROVEMENT_PROPOSAL.md  MCP_INFO_TOOLS.md  MULTI_CLIENT_DESIGN.md  OPTIMIZATIONS.md  OPTIMIZATION_PHASE4_AUDIT.md  OPTIMIZATION_QUICK_REFERENCE.md  OPTIMIZATION_ROADMAP.md  QUICK_REFERENCE.md  README_IMPROVEMENTS.md  REFACTORING_COMPLETE.md  REFACTORING_PROGRESS.md  ROUTINE_CATALOG.md  ROUTINE_SCHEMA.md  SUPERHEAT_SPEED_REPORT.md  TEST_PLAN.md  (+52 more)
.claude/: settings.local.json  workspace-nav.md
.gemini/: settings.json
bench_results/: README.md  analyze.py  gen_monolithic_summary.py  make_post_a_figure.py  make_post_figures.py  run_bench.py  run_bench_monolithic.py  summary.json  summary_monolithic.json
discord/: DISCORD_PLAN.md  server_setup.md  system_snapshot.md
discord_bot/: CLAUDE.md  CONTEXT.md  FAKING_FIX_PLAN.md  TICKET.md  __init__.py  activity_classifier.py  agent_brain.py  agentic_loop.py  bot.py  capability_registry.py  conversation_logger.py  intent_parser.py  intent_planner.py  live_test.py  llm_client.py  locations.py  models.py  recovery.py  task_manager.py  task_queue.py  test_cases.yaml  test_context_effectiveness.py  test_harness.py  training_logger.py
docs/: CONTEXT_DEVELOPMENT_METHODOLOGY.md  GAME_VIEWING_OPTIONS.md
fine_tuning/: CLAUDE.md  README.md
journals/: 2026-07-17_refactor_campaign.md  2026-07-18_close_the_loop_milestone_stage1.md  2026-07-18_diort_bringup_parallel.md  2026-07-18_progress.md  (+136 more)
(+265 files in other folders)
